welcome/students/k8s/lecturer/yaniv/DELL/Kavi/nginx-deployment-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: animals
spec:
  selector:
    matchLabels:
      app: moose
  replicas: 1
  strategy:
    type: Recreate
  template: 
    metadata:
      labels:
        app: moose
    spec:
      containers:
      - name: nginx
        image: supergiantkir/animals:moose
        ports:
        - containerPort: 80
